# tms-project

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  start.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/api/: apiClient.js
frontend/src/components/: AdminLayout.jsx  Footer.jsx  Navbar.jsx  UserCreateForm.jsx  UserEditForm.jsx
frontend/src/components/home/: ProjectCard.jsx  SubtaskList.jsx  SubtaskModal.jsx  TaskItem.jsx
frontend/src/components/projects/: ProjectDetails.jsx  ProjectForm.jsx  ProjectRow.jsx  ProjectTable.jsx
frontend/src/components/subtasks/: SubtaskForm.jsx  SubtasksTable.jsx  TaskTabs.jsx
frontend/src/components/tasks/: ProjectTabs.jsx  TaskDetails.jsx  TaskForm.jsx  TaskRow.jsx  TasksTable.jsx
frontend/src/components/users/: UserCreateForm.jsx  UserDetails.jsx  UserEditForm.jsx  UserRow.jsx  UsersTable.jsx
frontend/src/constants/: ApiUrls.jsx  HttpStatus.jsx  enums.jsx
frontend/src/pages/: AdminUsersPage.jsx  HomePage.jsx  ProjectAdminPage.jsx  SubtaskDetailPage.jsx  TaskAdminPage.jsx  TaskDetailPage.jsx  UserAdminPage.jsx
frontend/src/pages/Admin/: ProjectAdminPage.jsx  SubTaskAdminPage.jsx  TaskAdminPage.jsx  UserAdminPage.jsx
frontend/src/pages/Auth/: LoginPage.jsx  RegisterPage.jsx
frontend/src/services/: AuthService.jsx  projectService.jsx  subtaskService.jsx  taskService.jsx  userService.jsx
frontend/src/utils/: AuthContext.jsx  GuestRoute.jsx  ProtectedRoute.jsx
src/: fill_db.py  init_superuser.py
src/core/: celery.py  settings.py  urls.py
src/projects/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
src/projects/management/commands/: check_subtasks.py  fill_db.py
src/projects/migrations/: 0001_initial.py  0002_subtask_updated_at.py  0003_remove_project_deadline.py  0004_alter_subtask_status_alter_task_status.py
src/projects/serializers/: project_serializer.py  subtask_serializer.py  task_serializer.py
src/projects/services/: email_sender.py  email_templates.py  send_subtask_email.py
src/projects/templates/emails/: subtask_deadline.html  subtask_deadline.txt  (+4 more)
src/test_app/: admin.py  apps.py  models.py
src/test_app/migrations/: 0001_initial.py  0002_rename_created_ad_testexample_created_at.py
src/users/: models.py  serializers.py  signals.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_email.py
src/users/views/: auth.py  user.py
