[project]
name = "tms-project"
version = "0.1.0"
description = "A task management system built with Django."
authors = [
    {name = "Tekken",email = "maks.kreet@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "redis (>=6.0.0,<7.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "packaging (>=25.0,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
django-stubs = "^5.2.0"
mypy = "^1.15.0"

[tool.black]
line-length = 79  

[tool.flake8]
max-line-length = 79

[tool.mypy]
python_version = "3.11"
mypy_path = "src"